--- a/vod/guide.html
+++ b/vod/guide.html
@@ -26,15 +26,15 @@
 		<p>
 			על מנת לגשת כרגע לספריית ה-VOD יש לבחור את המקור במקום IPTV ל-VOD:<br>
 			בסדרל אפשרויות לוחצים על האייקון עם החץ כלפי מטה (כמו בתמונה):<br>
-			<img src="https://raw.githubusercontent.com/israelfun/israelfun/master/vod/0.png" style="width: 100%;;max-width: 100%;height: auto" alt="" width="500"><br>
+			<img src="https://raw.githubusercontent.com/israelfun/israelfun/master/vod/0.png" style="width: 100%;;max-width: 100%;height: auto" alt="" width="100%;"><br>
 			לאחר מכן בוחרים בחלונית בחר מקור את האפשרות השלישית VOD:<br>
-			<img src="https://raw.githubusercontent.com/israelfun/israelfun/master/vod/1.png" style="width: 100%;;max-width: 100%;height: auto" alt="" width="500"><br>
+			<img src="https://raw.githubusercontent.com/israelfun/israelfun/master/vod/1.png" style="width: 100%;;max-width: 100%;height: auto" alt="" width="100%;"><br>
 		</p>
 		<p>
 			לאחר מכן יטענו כל ה-VOD מסודר לפי תיקיות.<br>
 			לחיצה על תיקייה תוביל לרשימת הסרטים/פרקים מסודרת לפי א-ב.<br>
-			<img src="https://raw.githubusercontent.com/israelfun/israelfun/master/vod/3.png" style="width: 100%;;max-width: 100%;height: auto" alt="" width="500"><br><br>
-			<img src="https://raw.githubusercontent.com/israelfun/israelfun/master/vod/4.png" style="width: 100%;;max-width: 100%;height: auto" alt="" width="500">
+			<img src="https://raw.githubusercontent.com/israelfun/israelfun/master/vod/3.png" style="width: 100%;;max-width: 100%;height: auto" alt="" width="100%;"><br><br>
+			<img src="https://raw.githubusercontent.com/israelfun/israelfun/master/vod/4.png" style="width: 100%;;max-width: 100%;height: auto" alt="" width="100%;">
 		</p>
 	</div>
 
