--- a/vod/guide.html
+++ b/vod/guide.html
@@ -11,14 +11,16 @@
 	</div>
 	<h2>שלב 2</h2>
 	<div>
-		<p>שומרים את הקןבץ stream.php לתוך הסיפריה הראשית של השרת (הכתובת ההיא משלב הראשון).<br>בדרך ככל זו הכתובת:  /storage/emulated/0/www <br></p>
+		<p>להורדת קובץ stream.php מכאן: <a href="http://www40.zippyshare.com/pd/Kqi4F16Y/50182/stream.php">http://bit.ly/2k8nIKo</a></p>
+		<p>שומרים את הקןבץ stream.php לתוך הסיפריה הראשית של השרת (הכתובת ההיא משלב הראשון).<br>בדרך ככל זו הכתובת:<br><span style="direction: ltr">/storage/emulated/0/www/public/</span></p>
+
 	</div>
 
 	<h2>שלב 3</h2>
 	<div>
 		<p>שלב שבו מכניסים את הקישור של m3u לתוך פרפקט פלייר. יצאתי מנקודת הנחה ששפה היא בעברית כמו אצלי.</p>
 		<p>נכנסים לפרפקט פלייר. נכנסים להגדרות > כללי > לוחצים על פלייליסט X קישור לקובץ.</p>
-		<p>בחלונית שקפצה מזינים את הקישור לקובץ:<br>https://raw.githubusercontent.com/israelfun/israelfun/master/vod/vod.m3u<br>ומסמנים בוי את VOD<br>לוחצים על אישור.</p>
+		<p>בחלונית שקפצה מזינים את הקישור לקובץ:<br><a href="https://raw.githubusercontent.com/israelfun/israelfun/master/vod/vod.m3u">https://raw.githubusercontent.com/israelfun/israelfun/master/vod/vod.m3u</a><br>ומסמנים בוי את VOD<br>לוחצים על אישור.</p>
 	</div>
 
 	<h2>שלב 4</h2>
@@ -26,15 +28,15 @@
 		<p>
 			על מנת לגשת כרגע לספריית ה-VOD יש לבחור את המקור במקום IPTV ל-VOD:<br>
 			בסדרל אפשרויות לוחצים על האייקון עם החץ כלפי מטה (כמו בתמונה):<br>
-			<img src="https://raw.githubusercontent.com/israelfun/israelfun/master/vod/0.png" style="width: 100%;;max-width: 100%;height: auto" alt="" width="100%;"><br>
+			<img src="https://raw.githubusercontent.com/israelfun/israelfun/master/vod/0.png" style="width: 100%;max-width: 100%;height: auto" alt="" width="500"><br>
 			לאחר מכן בוחרים בחלונית בחר מקור את האפשרות השלישית VOD:<br>
-			<img src="https://raw.githubusercontent.com/israelfun/israelfun/master/vod/1.png" style="width: 100%;;max-width: 100%;height: auto" alt="" width="100%;"><br>
+			<img src="https://raw.githubusercontent.com/israelfun/israelfun/master/vod/1.png" style="width: 100%;max-width: 100%;height: auto" alt="" width="500"><br>
 		</p>
 		<p>
 			לאחר מכן יטענו כל ה-VOD מסודר לפי תיקיות.<br>
 			לחיצה על תיקייה תוביל לרשימת הסרטים/פרקים מסודרת לפי א-ב.<br>
-			<img src="https://raw.githubusercontent.com/israelfun/israelfun/master/vod/3.png" style="width: 100%;;max-width: 100%;height: auto" alt="" width="100%;"><br><br>
-			<img src="https://raw.githubusercontent.com/israelfun/israelfun/master/vod/4.png" style="width: 100%;;max-width: 100%;height: auto" alt="" width="100%;">
+			<img src="https://raw.githubusercontent.com/israelfun/israelfun/master/vod/3.png" style="width: 100%;max-width: 100%;height: auto" alt="" width="500"><br><br>
+			<img src="https://raw.githubusercontent.com/israelfun/israelfun/master/vod/4.png" style="width: 100%;max-width: 100%;height: auto" alt="" width="500">
 		</p>
 	</div>
 
