--- a/vod/html/test.html
+++ b/vod/html/test.html
@@ -21,18 +21,9 @@
 						<td><img src="https://image.tmdb.org/t/p/original/52KFUlr9nNDp48A3aJ2uwvRQ2Yh.jpg" alt="" height="200"></td>
 					</tr>
 					<tr>
-						<td>
-							<a href="http://0.0.0.0:8080/stream.php?s=uptostream&f=nedb1ieiedx2">9 הנשמות של לואיס דארקס</a><br>
-							פסיכולוג מתחיל לעבוד עם נער צעיר שסבל נפילה קטלנית כמעט ומוצא את עצמו נשאב לתוך תעלומה שבודקת את הגבולות של פנטזיה ומציאות.
-						</td>
-						<td>
-							<a href="http://0.0.0.0:8080/stream.php?s=uptostream&f=yzdgq3nt2v25">24 שעות לחיות</a><br>
-							מתנקש מחפש נחמה לאחר שקיבל הזדמנות שנייה לחייו
-						</td>
-						<td>
-							<a href="http://0.0.0.0:8080/stream.php?s=rv&f=FMCGZEEEKZ">10 אחוז ילדה שלי</a><br>
-							ניקו (אודי פרסי), בחור צעיר אשר ידוע ביצירתיותו וחסר מחויבות. כאשר פראני (יהלי פרידמן) בת ה-7 מוצאת אותו לתדהמתה במיטה של אימא, מערכת היחסים שלהם מתחילה ברגל שמאל. בעת שניקו מנסה לנהל קשר רומנטי עם אמא של פראני, היא מוצאת עצמה תקועה בין הכסאות, בין אמא שלה, אביה שמאוד מקנא וניקו שכעת מתפקד גם כבייביסיטר.
-						</td>
+						<td><a href="http://0.0.0.0:8080/stream.php?s=uptostream&f=nedb1ieiedx2">9 הנשמות של לואיס דארקס</a><br>פסיכולוג מתחיל לעבוד עם נער צעיר שסבל נפילה קטלנית כמעט ומוצא את עצמו נשאב לתוך תעלומה שבודקת את הגבולות של פנטזיה ומציאות.</td>
+						<td><a href="http://0.0.0.0:8080/stream.php?s=uptostream&f=yzdgq3nt2v25">24 שעות לחיות</a><br>מתנקש מחפש נחמה לאחר שקיבל הזדמנות שנייה לחייו</td>
+						<td><a href="http://0.0.0.0:8080/stream.php?s=rv&f=FMCGZEEEKZ">10 אחוז ילדה שלי</a><br>ניקו (אודי פרסי), בחור צעיר אשר ידוע ביצירתיותו וחסר מחויבות. כאשר פראני (יהלי פרידמן) בת ה-7 מוצאת אותו לתדהמתה במיטה של אימא, מערכת היחסים שלהם מתחילה ברגל שמאל. בעת שניקו מנסה לנהל קשר רומנטי עם אמא של פראני, היא מוצאת עצמה תקועה בין הכסאות, בין אמא שלה, אביה שמאוד מקנא וניקו שכעת מתפקד גם כבייביסיטר.</td>
 					</tr>
 				</tbody>
 			</table>
