--- a/vod/html/test.html
+++ b/vod/html/test.html
@@ -19,7 +19,7 @@
 						<td><img src="https://image.tmdb.org/t/p/original/k1bPjoZsPsox2HsImb2NKUHWP3i.jpg" alt="" height="200"></td>
 					</tr>
 					<tr>
-						<td><a href="https://raw.githubusercontent.com/israelfun/israelfun/master/vod/html/sratim.html">סרטים</a><br>סרטים</td>
+						<td><span>folder</sapn><a href="https://raw.githubusercontent.com/israelfun/israelfun/master/vod/html/sratim.html">סרטים</a><br>סרטים</td>
 					</tr>
 				</tbody>
 			</table>
