--- a/vod/html/sratim.html
+++ b/vod/html/sratim.html
@@ -22,7 +22,7 @@
 					</tr>
 					<tr>
 						<td>
-							<span type="1">folder</sapn><a href="http://0.0.0.0:8080/stream.php?s=uptostream&f=nedb1ieiedx2">9 הנשמות של לואיס דארקס</a><br>
+							<span type="1">folder</sapn><a href="FMTI2B6G7L">נסיון</a><br>
 							פסיכולוג מתחיל לעבוד עם נער צעיר שסבל נפילה קטלנית כמעט ומוצא את עצמו נשאב לתוך תעלומה שבודקת את הגבולות של פנטזיה ומציאות.
 						</td>
 						<td>
