--- a/vod/html/sratim.html
+++ b/vod/html/sratim.html
@@ -26,11 +26,11 @@
 							פסיכולוג מתחיל לעבוד עם נער צעיר שסבל נפילה קטלנית כמעט ומוצא את עצמו נשאב לתוך תעלומה שבודקת את הגבולות של פנטזיה ומציאות.
 						</td>
 						<td>
-							<span type="1">folder</sapn><a href="http://0.0.0.0:8080/stream.php?s=uptostream&f=yzdgq3nt2v25">24 שעות לחיות</a><br>
+							<span type="1">folder</sapn><a href="FMV0ID7SEU">24 שעות לחיות</a><br>
 							מתנקש מחפש נחמה לאחר שקיבל הזדמנות שנייה לחייו
 						</td>
 						<td>
-							<span type="1">folder</sapn><a href="http://0.0.0.0:8080/stream.php?s=rv&f=FMCGZEEEKZ">10 אחוז ילדה שלי</a><br>
+							<span type="1">folder</sapn><a href="FMCGZEEEKZ">10 אחוז ילדה שלי</a><br>
 							ניקו (אודי פרסי), בחור צעיר אשר ידוע ביצירתיותו וחסר מחויבות. כאשר פראני (יהלי פרידמן) בת ה-7 מוצאת אותו לתדהמתה במיטה של אימא, מערכת היחסים שלהם מתחילה ברגל שמאל. בעת שניקו מנסה לנהל קשר רומנטי עם אמא של פראני, היא מוצאת עצמה תקועה בין הכסאות, בין אמא שלה, אביה שמאוד מקנא וניקו שכעת מתפקד גם כבייביסיטר.
 						</td>
 					</tr>
