--- a/vod/html/vod.html
+++ b/vod/html/vod.html
@@ -29,9 +29,9 @@
 						<td>
 								<span type="2"></sapn><a href="#">הודעות מערכת</a><br>  {הודעת מערכת:}\nברוכים הבאים לגרסה החדשה. על מנת לצפות בספריית ה-VOD יש צורך להירשם כמנוי פרימיום באתר 1fichair.</td>
 						<td>
-								<span type="2"></sapn><a href="http://israelfunvod.atspace.tv/index2.php?id=30">סרטים</a><br>  {סרטים}</td>
+								<span type="2"></sapn><a href="http://israelfunvod.atspace.tv/index.php?id=30">סרטים</a><br>  {סרטים test}</td>
 						<td>
-								<span type="2"></sapn><a href="http://israelfunvod.atspace.tv/index2.php?id=27">סדרות</a><br>  {סדרות}</td>
+								<span type="2"></sapn><a href="http://israelfunvod.atspace.tv/index.php?id=27">סדרות</a><br>  {סדרות test}</td>
 </tr>
 				</tbody>
 			</table>
